--- a/teste11.html
+++ b/teste11.html
@@ -43,6 +43,12 @@
                  
                 <a href="https://www.youtube.com/watch?v=dE-YyI262W4" class="video">Aprecie os peixes.</a>
             </section>
+            <div class="isso">
+                <div class="blocão"></div>
+             <section>
+              <img src="img/106 Sem Título (1).jpg" alt="nadador" class="nadador">
+            </div>
+             </section>
         </main>
         <footer>
             <img src="img/zap.png" alt="some text">
